--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+    body{
+        padding: 0;
+        margin: 0;
+        background: #ccc;
+    }
+
+    </style>
 </head>
 
 <body>
